--- a/abc.html
+++ b/abc.html
@@ -2,6 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://あなたのユーザー名.github.io/abc/abc.html" />
+    <meta property="og:title" content="Hello World" />
+    <meta property="og:description" content="Hello World表示用サイトです。" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
