--- a/abc.html
+++ b/abc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="twitter:card" content="summary" />
-    <meta property="og:url" content="https://あなたのユーザー名.github.io/abc/abc.html" />
+    <meta property="og:url" content="https://nzld1818.github.io/abc/abc.html" />
     <meta property="og:title" content="Hello World" />
     <meta property="og:description" content="Hello World表示用サイトです。" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
